--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Learn about the OSI layers, their corresponding vulerabilities, and the attacks that exploit those vulnerabilities"
     />
     <title>OSI Model Attacks</title>
   </head>
